java tests after running roslyn, missing imports